--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "googleapis": "^126.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
