--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -2,10 +2,10 @@ name: Auto deploy
 on:
   push:
     branches:
-      -  main
+      -  prod
   pull_request:
     branches:
-      - main
+      - prod
 
 jobs:
   build:
